--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,10 +1,11 @@
 doctype html
 html
   head
-    title Metron
+    title= title
     = stylesheet_link_tag     'application', media: 'all', "data-turbolinks-track" => true
     = javascript_include_tag  'application', "data-turbolinks-track" => true
     = csrf_meta_tags
 
   body
+    h1= title
     = yield
