displaying variables when chowing model

--- a/app/views/models/show.html.slim
+++ b/app/views/models/show.html.slim
@@ -6,3 +6,6 @@ section
       dd= model.description
       dt Equation
       dd= model.equation
+  div.variables
+    h3 Variables
+    =render variables
