--- a/app/views/models/index.html.slim
+++ b/app/views/models/index.html.slim
@@ -1,5 +1,3 @@
 h3 Measurement Models
 
-- recent_models.each do |model|
-  dt= link_to model.name, model_path(model)
-  dd= model.description
+= render recent_models, partial: 'model'
